# dictzip

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
dictzip.xcodeproj/: project.pbxproj
dictzip.xcodeproj/xcuserdata/kejinlu.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: dictzip.c  dictzip.h
tests/: CMakeLists.txt  main.c
